--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
         <li>
             <a href="./public/birthday-invite.html">Birthday invite project</a>
         </li>    
-        <img src="./assets/images/Screenshot 2023-12-13 232832.png" height="400"/>
+        <img src="./assets/images/Birthday.png" height="400"/>
     </ul>
     <hr/>
     <h4>If you have more queries 👇</h4>
